# AmashiDiscordBot

./: README.md  ai_math.py  app.py  database.py  main.py  pyproject.toml  temp.py
cogs/: Code.py  Data.py  Dev.py  Fun.py  Misc.py  Music.py  WordFilter.py
custom_pycord/examples/app_commands/: slash_basic.py  slash_options.py
src/: Bot.py  database.py  translate.py
