[tool.poetry]
name = "amashidiscordbot"
version = "0.1.0"
description = ""
authors = ["skellymclane386 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.6.6"
discord-components = "^2.1.1"
pymongo = "^3.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
